01-loadbalancing/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
  namespace: test
  labels:
    app: web-app
spec:
  type: ClusterIP
  ports:
  - port: 9090
    targetPort: 7777
    protocol: TCP
  selector:
    app: web-app
